0.5.1
-----
1. Reduce QMutex usage - have MPDStats/MPDStatus emitted as objects, and
   stored in relevant classes.
2. When renaming files, rename file.lyrics if it exists.
3. Use QDateTime::toString(Qt::SystemLocaleShortDate) to show server last
   update in server info page.
4. TagLib is required for build.

0.5.0
-----
 1. Add ability to calculate replaygain tags. (KDE only)
 2. Add a VERY basic http server so that local files can be played even when
    connected to MPD from a non-local socket.
 3. Add grouped playqueue style - where album entries are grouped.
 4. Add option (in sidebar's context menu) to auto-hide the library, etc,
    browser pages when the mouse is not over them. Thanks to Piotr Wicijowski
    for implementing this.
 5. Add support for mounting a 'device' via sshfs, and for treating a local
    folder as a device. Currently NOT in main build, to use pass
    -DENABLE_REMOTE_DEVICES=1 to cmake
 6. Add "Open File Manager" action to folder page context menu. (KDE only)
 7. Open local files passed on commandline - if using local socket, or http
    server. (KDE only)
 8. When MPD connection is lost, indicate via message widget.
 9. Dont show base dir when editing tags of tracks on a UMS device.
10. In tag editor dialog, if a field in the 'All tracks' section has multiple
    values - set the placeholder text to '(Various)'
11. Add a cmake option CANTATA_TRANSLATIONS, used to specify which translations
    should be built and installed. e.g.
        -DCANTATA_TRANSLATIONS="en;pl"
12. When playing, centre on current track.
13. Use correct value for transcoder parameter.
14. When saving cache file, if a track is filed under 'single artists' then
    store its actual album name in the cache file. Then when cache is loaded,
    the correct album name is available to use for the tag editor.
15. Fix crash when deleting streams.
16. Add option to sort albums in albums view by either album-artist or
    artist-album.