@@ -5,7 +5,6 @@
 #define PACKAGE_VERSION "@CANTATA_VERSION_FULL@"
 #define PACKAGE_STRING  PACKAGE_NAME" "PACKAGE_VERSION
 
-#cmakedefine ENABLE_TAG_EDITOR_SUPPORT 1
 #cmakedefine ENABLE_DEVICES_SUPPORT 1
 #cmakedefine COMPLEX_TAGLIB_FILENAME 1
 #cmakedefine TAGLIB_EXTRAS_FOUND 1
