@@ -65,9 +65,7 @@ AlbumsPage::AlbumsPage(MainWindow *p)
     view->addAction(p->copyToDeviceAction);
     view->addAction(p->organiseFilesAction);
     #endif
-    #ifdef ENABLE_TAG_EDITOR_SUPPORT
     view->addAction(p->editTagsAction);
-    #endif
     #ifdef ENABLE_REPLAYGAIN_SUPPORT
     view->addAction(p->replaygainAction);
     #endif
@@ -234,9 +232,7 @@ void AlbumsPage::controlActions()
     mw->copyToDeviceAction->setEnabled(enable);
     mw->organiseFilesAction->setEnabled(enable);
     #endif
-    #ifdef ENABLE_TAG_EDITOR_SUPPORT
     mw->editTagsAction->setEnabled(enable);
-    #endif
     #ifdef ENABLE_REPLAYGAIN_SUPPORT
     mw->replaygainAction->setEnabled(enable);
     #endif
