@@ -68,9 +68,7 @@ FolderPage::FolderPage(MainWindow *p)
     view->addAction(p->copyToDeviceAction);
     view->addAction(p->organiseFilesAction);
     #endif
-    #ifdef ENABLE_TAG_EDITOR_SUPPORT
     view->addAction(p->editTagsAction);
-    #endif
     #ifdef ENABLE_REPLAYGAIN_SUPPORT
     view->addAction(p->replaygainAction);
     #endif
@@ -159,9 +157,7 @@ void FolderPage::controlActions()
     mw->copyToDeviceAction->setEnabled(enable);
     mw->organiseFilesAction->setEnabled(enable);
     #endif
-    #ifdef ENABLE_TAG_EDITOR_SUPPORT
     mw->editTagsAction->setEnabled(enable);
-    #endif
     #ifdef ENABLE_REPLAYGAIN_SUPPORT
     mw->replaygainAction->setEnabled(enable);
     #endif
